--- a/style.css
+++ b/style.css
@@ -1,13 +1,24 @@
 
-.debug_line{
-    width: 100%;
-    background-color: azure;
-    border: 1px solid #35fae8;
-    position: fixed;
-    bottom:0px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    padding: 0px 10px;
-    font-family: monospace;
+/*.debug_line{*/
+/*    width: 100%;*/
+/*    background-color: azure;*/
+/*    border: 1px solid #35fae8;*/
+/*    position: fixed;*/
+/*    bottom:0px;*/
+/*    height: 50px;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    padding: 0px 10px;*/
+/*    font-family: monospace;*/
+/*}*/
+
+.showcase_container{
+    width: 1400px;
+    margin: 0px auto;
+    border-left: 1px solid;
+    border-right: 1px solid;
+    padding: 10px;
+}
+.show_case_item_img img{
+    width: 200px;
 }
