--- a/style.css
+++ b/style.css
@@ -18,6 +18,13 @@
     border-left: 1px solid;
     border-right: 1px solid;
     padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.show_case_item{
+    width: 300px;
+    height: 400px;
 }
 .show_case_item_img img{
     width: 200px;
