--- a/assets/style.css
+++ b/assets/style.css
@@ -57,16 +57,11 @@ body {
     background-color: aliceblue;
     color: black;
 }
-
-/*line_menu*/
-/*.line_menu{*/
-/*    display: flex;*/
-/*    flex-wrap: wrap;*/
-/*}*/
 .line_menu_item {
     border-right: 1px solid;
     padding: 0px 10px;
     transition: 0.3s;
+    flex: 1;
 }
 .line_menu_item a{
     color: #484848;
@@ -74,4 +69,16 @@ body {
 }
 .line_menu_item a:hover{
     color: black
+}
+.line_menu.sub_level{
+    display: none;
+    position: absolute;
+    background-color: white;
+    left: 10%;
+}
+.line_menu.sub_level_active{
+    display: flex;
+}
+.line_menu.sub_level .line_menu_item.sub_level{
+    flex:auto;
 }
